--- a/packages/Reference/src/ReferenceDrawer/index.less
+++ b/packages/Reference/src/ReferenceDrawer/index.less
@@ -1,21 +1,19 @@
 .reference-drawer{
     .ant-drawer-header{
-        padding: 8px 14px;
+        padding: 14px;
+        .ant-drawer-title{
+            max-width: 90%;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            font-size: 14px;
+        }
         .ant-drawer-close{
-            height: 40px;
-            line-height: 40px;
+            height: 50px;
+            line-height: 50px;
         }
     }
     .ant-drawer-body{
         padding: 14px 20px;
     }
-}
-.drawer-reference-title{
-    padding: 10px 16px;
-    width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    font-size: 14px;
-    border-bottom: 1px solid #e1e6ee;
 }
