修改弹窗以及文案

--- a/packages/Reference/lib/ReferenceInfo/index.less
+++ b/packages/Reference/lib/ReferenceInfo/index.less
@@ -5,6 +5,9 @@
       height: 30px;
       line-height: 30px;
       font-size: 14px;
+      .ml-6{
+        margin-left: 6px;
+      }
       &::before{
           content:"";
           width: 3px;
