--- a/packages/Reference/src/ReferenceCheck/index.less
+++ b/packages/Reference/src/ReferenceCheck/index.less
@@ -1,3 +1,7 @@
-.mb10{
-    margin-bottom: 10px;
+
+.reference-check-modal{
+    padding: 16px 20px;
+    .mb10{
+        margin-bottom: 10px;
+    }
 }
