--- a/packages/Reference/src/ReferenceInfo/index.less
+++ b/packages/Reference/src/ReferenceInfo/index.less
@@ -37,5 +37,24 @@
   }
   .reference-body-item{
     margin-bottom: 20px;
+    .refer-tag{
+      height: 22px;
+      line-height: 22px;
+      border-radius: 1px;
+      font-size: 12px;
+      display: inline-block;
+      margin-right: 6px;
+      padding:0 8px;
+      &.refer-tag-weak{
+        color: #454F64;
+        background: rgba(139,145,158,0.10);
+        border: 1px solid rgba(139,145,158,0.4);
+      }
+      &.refer-tag-strong{
+        color: #D96156;
+        background: rgba(217,97,86,0.10);
+        border: 1px solid rgba(217,97,86,0.4);
+      }
+    }
   }
 }
