--- a/packages/Reference/lib/ReferenceInfo/index.less
+++ b/packages/Reference/lib/ReferenceInfo/index.less
@@ -59,7 +59,9 @@
   }
   .reference-table{
     .ant-table-tbody > tr > td{
-      height: 41px !important;
+      .tnt-ellipsis{
+        line-height: 22px !important;
+      }
     }
   }
 }
