--- a/packages/Reference/src/ReferenceInfo/index.less
+++ b/packages/Reference/src/ReferenceInfo/index.less
@@ -57,9 +57,9 @@
       }
     }
   }
-  .reference-table{
-    .ant-table-tbody > tr > td{
-      height: 41px !important;
+  .ant-table-tbody > tr > td{
+    .tnt-ellipsis{
+      line-height: 22px !important;
     }
   }
 }
