上线校验失败文字为空色

--- a/packages/Reference/lib/ReferenceInfo/index.less
+++ b/packages/Reference/lib/ReferenceInfo/index.less
@@ -61,5 +61,10 @@
     .tnt-ellipsis{
       line-height: 22px !important;
     }
+    &.refer-warning-txt{
+      *{
+        color:#D96156 !important;
+      }
+    }
   }
 }
